--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <script type="text/javascript">
             function check()
             {
-                alert( document.getElementById('test') );
+                alert( document.getElementById('test').innerHTML );
+                document.getElementById('test').innerHTML = '<h1>中身書き換え！</h1>';
+
             }
 	        function updateMessage(mes)
 	        {
-                document.getElementById('').innerHTML = mes;
+                document.getElementById('mes').innerHTML = mes;
 	        }
     </script>
   </head>
